Fixed navbar like alignment

--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ h3 {
   background-color: aliceblue;
 }
 
-#navbarlink{
-  color: #000;
-  text-decoration: none;
-}
+/* #navlinklist{
+  padding: 20px;
+} */
 
 body {
   background-color: rgb(167, 187, 221);
